--- a/.github/workflows/test_coverage.yml
+++ b/.github/workflows/test_coverage.yml
@@ -4,7 +4,7 @@ on: pull_request
 
 jobs:
   testSourceUbuntu:
-    name: Unit tests (source JDK)
+    name: Unit tests (JDK 17, ubuntu-latest)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest, macos-latest]
-    name: Unit tests (source JDK)
+    name: Unit tests (JDK 17, ${{ matrix.os }})
     runs-on: "${{ matrix.os }}"
     steps:
       - uses: actions/checkout@v3
@@ -41,7 +41,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         java: [18, 19]
-    name: Unit tests (target JDK ${{ matrix.java }})
+    name: Unit tests (JDK ${{ matrix.java }}, ${{ matrix.os }})
     runs-on: "${{ matrix.os }}"
     steps:
       - uses: actions/checkout@v3
