--- a/pom.xml
+++ b/pom.xml
@@ -81,15 +81,15 @@
                 <module>hartshorn-util</module>
                 <module>hartshorn-discovery</module>
                 <module>hartshorn-proxy</module>
-                <module>hartshorn-proxy/hartshorn-proxy-cglib</module>
-                <module>hartshorn-proxy/hartshorn-proxy-javassist</module>
+                <module>hartshorn-proxy-cglib</module>
+                <module>hartshorn-proxy-javassist</module>
                 <module>hartshorn-introspect</module>
-                <module>hartshorn-introspect/hartshorn-introspect-reflection</module>
+                <module>hartshorn-introspect-reflection</module>
                 <module>hartshorn-core</module>
                 <module>hartshorn-reporting</module>
                 <module>hartshorn-hsl</module>
                 <module>hartshorn-config</module>
-                <module>hartshorn-config/hartshorn-config-jackson</module>
+                <module>hartshorn-config-jackson</module>
                 <module>hartshorn-i18n</module>
                 <module>hartshorn-commands</module>
                 <module>hartshorn-assembly/pom.assembly.xml</module>
