--- a/.github/workflows/test_coverage.yml
+++ b/.github/workflows/test_coverage.yml
@@ -3,8 +3,8 @@ name: Hartshorn
 on: pull_request
 
 jobs:
-  testSourceUbuntu:
-    name: Unit tests (JDK 17, ubuntu-latest)
+  coverage:
+    name: Code coverage
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -13,11 +13,11 @@ jobs:
         with:
           java-version: 17
           distribution: temurin
-      - name: "Unit testing (OS: ubuntu-latest, source JDK)"
-        run: mvn clean test -P ci,all
-        shell: bash
+      - name: Run tests
+        id: test
+        run: "mvn clean verify -Djacoco.skip=false -Dcoverage.skip=false -P ci,all -Djacoco.haltOnFailure=true"
   testSourceCompat:
-    needs: [testSourceUbuntu]
+    needs: [coverage]
     strategy:
       fail-fast: false
       matrix:
@@ -35,7 +35,7 @@ jobs:
         run: mvn clean test -P ci,all
         shell: bash
   testTarget:
-    needs: [testSourceUbuntu]
+    needs: [coverage]
     strategy:
       fail-fast: false
       matrix:
@@ -53,17 +53,3 @@ jobs:
       - name: "Unit testing (OS: ${{ matrix.os }}, Java: ${{ matrix.java }})"
         run: mvn clean test -P ci,all
         shell: bash
-  coverage:
-    needs: [testSourceUbuntu]
-    name: Code coverage
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up source JDK
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: temurin
-      - name: Run tests
-        id: test
-        run: "mvn clean verify -Djacoco.skip=false -Dcoverage.skip=false -P ci,all -Djacoco.haltOnFailure=true"
