--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,7 @@
 
             <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.1.1</version>
                 <configuration>
                     <!-- Skip root pom, re-enabled in hartshorn-assembly/pom.staging.xml -->
                     <skip>true</skip>
