--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -2,24 +2,59 @@ name: 'Bug report'
 description: 'If you found a bug, please report it here.'
 labels: ['type: bug']
 body:
+  - type: textarea
+    id: description
+    attributes:
+      label: 'Description'
+      description: 'Provide a clear and concise description of the bug you encountered.'
+    validations:
+      required: true
+  - type: textarea
+    id: steps
+    attributes:
+      label: 'Steps to Reproduce'
+      description: 'List the steps that can be followed to reproduce the bug. Include as much detail as necessary.'
+    validations:
+      required: true
+  - type: textarea
+    id: expected
+    attributes:
+      label: 'Expected Behavior'
+      description: 'Describe what you expected to happen when following the steps above.'
+    validations:
+      required: true
+  - type: textarea
+    id: actual
+    attributes:
+      label: 'Actual Behavior'
+      description: 'Explain what actually happened when you followed the steps above.'
+    validations:
+      required: true
+  - type: textarea
+    id: screenshots
+    attributes:
+      label: 'Error messages or stack traces'
+      description: 'If applicable, include any error messages or stack traces here.'
+    validations:
+      required: false
+  - type: textarea
+    id: additional
+    attributes:
+      label: 'Additional context'
+      description: 'Add any other context about the problem here.'
+    validations:
+      required: false
   - type: input
-    id: version
+    id: related
     attributes:
-      label: 'Version'
-      description: 'What is the earliest version the issue applies to? E.g. 0.4.0. If the issue applies to a snapshot or release candidate, please use the version number of the release candidate or snapshot.'
+      label: 'Related issues'
+      description: 'If applicable, list any related issues here.'
     validations:
-      required: true
+      required: false
   - type: textarea
-    id: problem
+    id: solutions
     attributes:
-      label: 'Problem/Opportunity'
-      description: 'Describe the problem you are trying to solve.'
-    validations:
-      required: true
-  - type: textarea
-    id: solution
-    attributes:
-      label: 'Proposed solution'
-      description: 'Specify how you would like the solution to be developed. If you have a specific plan, please describe it here.'
+      label: 'Possible solutions'
+      description: 'If you have any ideas on how to solve this bug, list them here.'
     validations:
       required: false
