--- a/.github/workflows/build_modules.yml
+++ b/.github/workflows/build_modules.yml
@@ -4,31 +4,14 @@ on: pull_request
 
 jobs:
   buildSource:
-    name: Build all (source JDK)
+    name: Build all
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Set up source JDK
         uses: actions/setup-java@v3
         with:
-          java-version: 17
+          java-version: 21
           distribution: temurin
       - name: "Build (source JDK)"
-        run: mvn clean install -DskipTests -P ci,all
-  buildTarget:
-    needs: [buildSource]
-    strategy:
-      fail-fast: false
-      matrix:
-        java: [18, 19]
-    name: Build all (target JDK ${{ matrix.java }})
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v3
-        with:
-          java-version: ${{ matrix.java }}
-          distribution: temurin
-      - name: "Build (Java ${{ matrix.java }})"
         run: mvn clean install -DskipTests -P ci,all
