#995 Pass coverage job until project coverage is sufficient

--- a/.github/workflows/test_coverage.yml
+++ b/.github/workflows/test_coverage.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Run tests
         id: test
         run: "mvn clean verify -Djacoco.skip=false -Dcoverage.skip=false -P ci,all -Djacoco.haltOnFailure=true"
+        continue-on-error: true # Don't fail the build while coverage is known to be low. #967 will fix this.
   testSourceCompat:
     needs: [coverage]
     strategy:
