#967 Remove redundant test skip flag

--- a/.github/workflows/test_coverage.yml
+++ b/.github/workflows/test_coverage.yml
@@ -15,8 +15,7 @@ jobs:
           distribution: temurin
       - name: Run tests
         id: test
-        # Skip coverage while it is known to be too low. To be followed up in #967
-        run: "mvn clean verify -Djacoco.skip=false -Dcoverage.skip=true -P ci,all -Djacoco.haltOnFailure=true"
+        run: "mvn clean verify -P ci,all -Djacoco.haltOnFailure=true"
   testSourceCompat:
     needs: [coverage]
     strategy:
@@ -33,6 +32,5 @@ jobs:
           java-version: 21
           distribution: temurin
       - name: "Unit testing (OS: ${{ matrix.os }}, source JDK)"
-        # Skip coverage while testing compatibility, already tested in coverage job
-        run: "mvn clean verify -Djacoco.skip=false -Dcoverage.skip=true -P ci,all -Djacoco.haltOnFailure=true"
+        run: "mvn clean verify -P ci,all -Djacoco.haltOnFailure=true"
         shell: bash
