Update name and description for 'enhancement' template
Signed-off-by: Guus Lieben <guus@xendox.com>

--- a/.github/ISSUE_TEMPLATE/enhancement.yml
+++ b/.github/ISSUE_TEMPLATE/enhancement.yml
@@ -1,5 +1,5 @@
-name: 'Feature request'
-description: 'If you want to add a feature to the project, please create an issue here.'
+name: 'Enhancement'
+description: 'If you want to improve an already existing feature, please create an issue here.'
 labels: ['type: enhancement']
 body:
   - type: textarea
