#1027 Add new JavaDoc tags to the maven-javadoc-plugin configuration

--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,23 @@
                     <show>package</show>
                     <show>protected</show>
                     <show>public</show>
+                    <tags>
+                        <tag>
+                            <name>apiNote</name>
+                            <placement>a</placement>
+                            <head>API Note:</head>
+                        </tag>
+                        <tag>
+                            <name>implSpec</name>
+                            <placement>a</placement>
+                            <head>Implementation Specification:</head>
+                        </tag>
+                        <tag>
+                            <name>implNote</name>
+                            <placement>a</placement>
+                            <head>Implementation Note:</head>
+                        </tag>
+                    </tags>
                 </configuration>
                 <executions>
                     <execution>
