--- a/.github/workflows/license_check.yml
+++ b/.github/workflows/license_check.yml
@@ -9,6 +9,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          # We need the full history to check the year on license headers
+          fetch-depth: 0
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
