--- a/.github/workflows/dependency_check.yml
+++ b/.github/workflows/dependency_check.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Prepare for dependency check
         run: mvn clean install -DskipTests -P ci,all
       - name: Analyze dependencies
-        run: mvn dependency-check:check -Dowasp.skip=false -P ci,all
+        run: mvn dependency-check:check -Dowasp.skip=false -DnvdApiKey=${{ secrets.NVD_API_KEY }} -P ci,all
       - name: Archive dependency reports
         uses: actions/upload-artifact@v2
         if: always()
